Cambios en calcular_media_post
